--- a/index.html
+++ b/index.html
@@ -7,9 +7,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="sidebar"></div>
-    <div id="home-content">
+    <div id="sidebar">
 
+    </div>
+    <div id="home-content">
+        <div class="row">
+            <div id="logo-container">
+                <div id="logo"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div id="top-product-container">
+                <div id="top-product-card" class="card card-large">
+
+                </div>
+            </div>
+            <div id="menu-link-container">
+                <div id="menu-link">
+
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div id="product-marquee-container">
+                <div class="card marquee-card">
+
+                </div>
+            </div>
+        </div>
     </div>
     <div id="menu-content" class="hidden">
 
@@ -26,6 +51,5 @@
     <div id="sales-data-content" class="hidden">
 
     </div>
-
 </body>
 </html>
