--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="sidebar">
 
     </div>
-    <div id="home-content">
+    <div id="home-content" class="hidden">
         <div class="row">
             <div id="logo-container">
                 <div id="logo"></div>
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <div id="menu-content" class="hidden">
+    <div id="menu-content" class="">
 
     </div>
     <div id="about-content" class="hidden">
@@ -52,4 +52,5 @@
 
     </div>
 </body>
+<script src="menu.js"></script>
 </html>
