--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Inter:wght@300;400;600;800&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
     <div id="sidebar">
         <div id="login-sect">
@@ -53,8 +58,9 @@
 
     <div id="home-content">
         <div class="row">
-            <div id="logo-container">
-                <div id="logo"></div>
+            <div id="title-container">
+                <h1 class="title">GAME ON. GRAB YOUR SLICE.</h1>
+                <p class="title-sub">Retro vibes, modern pies. Power up your order.</p>
             </div>
         </div>
         <div class="row">
