Added card css and typewriter fx + logo thing

--- a/index.html
+++ b/index.html
@@ -58,14 +58,19 @@
 
     <div id="home-content">
         <div class="row">
+            <div id="logo-container">
+                <img id="logo" src="images/temp-log.png" alt="">
+            </div>
+        </div>
+        <div class="row">
             <div id="title-container">
-                <h1 class="title">GAME ON. GRAB YOUR SLICE.</h1>
+                <h1 class="title" id="hero-title">GAME ON. GRAB YOUR SLICE.</h1>
                 <p class="title-sub">Retro vibes, modern pies. Power up your order.</p>
             </div>
         </div>
         <div class="row">
             <div id="top-product-container">
-                <div id="top-product-card" class="card card-large">
+                <div id="top-product-card" class="card-large">
 
                 </div>
             </div>
@@ -77,7 +82,7 @@
         </div>
         <div class="row">
             <div id="product-marquee-container">
-                <div class="card marquee-card">
+                <div class="marquee-card">
 
                 </div>
             </div>
@@ -101,4 +106,39 @@
 </body>
 <script src="menu.js"></script>
 <script src="nav.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const el = document.getElementById("hero-title")
+        const text = el.textContent.trim()
+        let i = 0
+        let deleting = false
+
+        function cur() {
+            let visible = text.slice(0, i)
+            let blanks = " ".repeat(text.length - i)
+            el.textContent = visible + blanks
+
+            if (!deleting) {
+                i++
+                if (i === text.length) {
+                    deleting = true
+                    setTimeout(cur, 1500)
+                    return
+                }
+            } else {
+                i--
+                if (i === 0) {
+                    deleting = false
+                    setTimeout(cur, 600)
+                    return
+                }
+            }
+
+            setTimeout(cur, deleting ? 45 : 65)
+        }
+
+        cur()
+    });
+</script>
+
 </html>
