--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div id="sidebar">
         <div id="login-sect">
             <div id="login-msg">Logged Out</div>
-            <button class="ci-remove dropdown-form hidden" style="margin-right: 25px;">✕</button>
-            <div id="login-dropdown" class="dropdown-form hidden">
+            <button id="login-close-btn" class="ci-remove dropdown-form hidden" style="margin-right: 25px;" onclick="toggleDropdown()">✕</button>
+            <div id="login-dropdown" class="dropdown-form closed">
                 <div id="login-container" class="">
                     <form action="">
                         <div class="row">
@@ -52,7 +52,7 @@
                     </form>
                 </div>
             </div>
-            <button id="login-out-btn">Login</button>
+            <button id="login-out-btn" onclick="login()">Login</button>
         </div>
         <div id="nav-links">
             <a id="nav-home" class="nav-link">Home</a>
