improved login dropdown functionality to be more dynamic

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                             <label for="pass">Password:</label>
                             <input type="text" name="pass">
                         </div>
-
                     </form>
                 </div>
                 <div id="register-container" class="hidden">
@@ -51,6 +50,9 @@
 
                     </form>
                 </div>
+                <div id="register-link" class="row">
+                        <a onclick="toggleRegister()">New Player? <span>Create Account.</span></a>
+                    </div>
             </div>
             <button id="login-out-btn" onclick="login()">Login</button>
         </div>
