Added title to menu and hover anim for nav bar

--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
         </div>
     </div>
     <div id="menu-content" class="hidden">
+        <h1 class="title">OUR PIZZA PALETTE</h1>
+        
         <div id="menu-grid">
 
         </div>
