updated marquee cards, home page layout, moved scripts to folders

--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
                 <p class="title-sub">Retro vibes, modern pies. Power up your order.</p>
             </div>
         </div>
-        <div class="row">
+        <div id= "top-product-row" class="row">
             <div id="top-product-container">
             
             </div>
             <div id="menu-link-container">
                 <div id="menu-link">
-
+                    <a onclick="navigate(navLinks.menu)">View The Full Menu</a>
                 </div>
             </div>
         </div>
@@ -174,9 +174,10 @@
 
     </div>
 </body>
-<script src="menu.js"></script>
-<script src="nav.js"></script>
-<script src="style.js"></script>
-<script src="login.js"></script>
+<script src="script/menu.js"></script>
+<script src="script/nav.js"></script>
+<script src="script/style.js"></script>
+<script src="script/login.js"></script>
+<script src="script/marquee.js"></script>
 
 </html>
