--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             <div id="menu-link-container">
                 <div id="menu-link">
-
+                    <a onclick="navigate(navLinks.menu)">View The Full Menu</a>
                 </div>
             </div>
         </div>
@@ -304,5 +304,6 @@
 <script src="script/nav.js"></script>
 <script src="script/style.js"></script>
 <script src="script/login.js"></script>
+<script src="script/marquee.js"></script>
 
 </html>
