fixed one more thing

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <p class="title-sub">Retro vibes, modern pies. Power up your order.</p>
             </div>
         </div>
-        <div class="row">
+        <div id="top-product-row" class="row">
             <div id="top-product-container">
 
             </div>
